--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,21 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_info"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_info" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_blank"
+        android:enabled="false"
+         android:title=""/>
+    <item
+        android:id="@+id/navigation_current_situation"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_current_situation" />
+    <item
+        android:id="@+id/navigation_setting"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_setting" />
 
 </menu>
