--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/navigation_info"
         android:name="com.icarus.recycle_app.ui.info.InfoFragment"
         android:label="@string/title_info"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_info" />
 
     <fragment
         android:id="@+id/navigation_current_situation"
