--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -149,6 +149,38 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:text="카테고리별 쓰레기" />
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:columnCount="5"
+                    android:rowCount="2">
+
+                    <Button
+                        android:text="Button 1"
+                        android:layout_row="0"
+                        android:layout_column="0" />
+
+                    <Button
+                        android:text="Button 2"
+                        android:layout_row="0"
+                        android:layout_column="1" />
+
+                    <Button
+                        android:text="Button 2"
+                        android:layout_row="0"
+                        android:layout_column="2" />
+
+                    <Button
+                        android:text="Button 2"
+                        android:layout_row="0"
+                        android:layout_column="3" />
+
+                    <Button
+                        android:text="Button 3"
+                        android:layout_row="0"
+                        android:layout_column="4" />
+
+                </GridLayout>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
