--- a/app/src/main/res/layout/fragment_search_image.xml
+++ b/app/src/main/res/layout/fragment_search_image.xml
@@ -12,6 +12,36 @@
         android:id="@+id/ivCameraResult"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="50dp" />
+        android:layout_marginTop="90dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginBottom="150dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_margin="15dp"
+        android:id="@+id/fabBack"
+        android:src="@drawable/ic_arrow_back_black"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:text="사진이 올바르게 나왔는지 확인하고 전송 버튼을 눌러주세요."
+        android:id="@+id/tvInfo"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/ivCameraResult"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="전송"
+        app:layout_constraintTop_toBottomOf="@id/tvInfo"
+        app:layout_constraintEnd_toEndOf="@id/tvInfo"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="15dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
