--- a/app/src/main/res/layout/fragment_search_image.xml
+++ b/app/src/main/res/layout/fragment_search_image.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/btnSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="전송"
