--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -4,34 +4,49 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <ImageView
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/test"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_content"
+        android:id="@+id/clContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:paddingHorizontal="8dp"
         app:layout_constraintTop_toBottomOf="@id/iv_image">
+
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="쓰레기 안내 타이틀"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:layout_marginTop="8dp"
+            android:id="@+id/tvContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="환경 보호 안내"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:textSize="15sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>
+
         <Button
+            android:layout_marginTop="8dp"
             android:id="@+id/btn_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="설명 보러 가기 >"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvContent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
