온보딩 화면 디버그 설정 홈 화면 디자인 수정 - 카메라 아이콘 추가

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -122,11 +122,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textColor="@color/white"
-                    android:padding="10dp"
-                    android:text="어떻게 버리지?"
-                    android:layout_marginVertical="20dp" />
+                    style="@style/bold_style_white"
+                    android:text="어떻게 버리지?" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -360,6 +357,7 @@
                     android:id="@+id/gridView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
                     android:numColumns="3"/>
 
 
