--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,8 +110,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tvClFirstAppInfo1"
                     app:layout_constraintBottom_toTopOf="@id/tvClFirstAppInfo2"
                     android:layout_marginVertical="15dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:background="@color/white"
+                    android:background="@drawable/custom_circle_background"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
