검색 액티비티 추가 카메라 모드 디자인 수정

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,10 @@
         android:label="@string/title_setting"
         tools:layout="@layout/fragment_setting" />
 
+    <fragment
+        android:id="@+id/navigation_search"
+        android:name="com.icarus.recycle_app.ui.setting.SettingFragment"
+        android:label="검색 화면"
+        tools:layout="@layout/fragment_info" />
+
 </navigation>
