--- a/app/src/main/res/layout/dialog_main_fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_main_fragment_bottom_sheet.xml
@@ -4,47 +4,68 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="16dp">
-
-    <TextView
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="쓰레기 검색하기"
-        android:gravity="center_horizontal" />
+    android:orientation="vertical">
 
     <LinearLayout
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        android:padding="15dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <Button
-            android:layout_margin="20dp"
-            android:id="@+id/btnCamera"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/ll_camera"
             android:layout_height="wrap_content"
-            android:text="카메라" />
+            android:layout_width="0dp"
+            android:orientation="vertical"
+            android:background="@drawable/custom_circle_background_teal200"
+            android:layout_weight="10">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:id="@+id/btnCamera"
+                android:scaleType="centerCrop"
+                android:layout_height="50dp"
+                android:layout_width="50dp"
+                android:src="@drawable/ic_camera"
+                style="@style/icon_style_white"/>
 
-        <Button
-            android:layout_margin="20dp"
-            android:id="@+id/btnGallery"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="갤러리" />
+            <TextView
+                style="@style/bold_style_white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="카메라" />
+        </LinearLayout>
 
-        <Button
-            android:layout_margin="20dp"
-            android:id="@+id/btnBarcode"
-            android:layout_weight="1"
+        <LinearLayout
             android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:id="@+id/ll_gallery"
             android:layout_height="wrap_content"
-            android:text="바코드" />
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:background="@drawable/custom_circle_background_teal700"
+            android:layout_weight="10">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:id="@+id/btnGallery"
+                android:scaleType="centerCrop"
+                android:layout_height="50dp"
+                android:layout_width="50dp"
+                android:src="@drawable/ic_gallery"
+                style="@style/icon_style_white" />
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/bold_style_white"
+                android:text="갤러리"/>
+        </LinearLayout>
+
 
     </LinearLayout>
 
