--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,11 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:scaleType">centerInside</item>
     </style>
+    <style name="icon_style_white">
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="android:tint">@color/white</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:scaleType">centerInside</item>
+    </style>
 </resources>
