--- a/app/src/main/res/layout/activity_search_list.xml
+++ b/app/src/main/res/layout/activity_search_list.xml
@@ -6,16 +6,15 @@
     android:layout_height="match_parent" >
     <!-- android:paddingTop="?attr/actionBarSize" -->
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/sv1"
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@+id/sv1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:gravity="center_vertical"
+        android:textColorHint="#555555"
+        android:completionHint="검색어를 입력하세요."
+        android:completionThreshold="1" />
 
 
 
